# MessageQueue

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mediator.cpp  mediator.h  reader.cpp  reader.h
core/: CMakeLists.txt  imessage-queue-events.h  message-queue.h  message-queue_impl.h  message.h  message_impl.h  raii-thread.cpp  raii-thread.h  reader-interface.cpp  reader-interface.h  return-codes.h  writer.cpp  writer.h
qml/: QueueView.qml  main.qml  qml.qrc
